--- a/src/app/components/request/edit/editRequest.component.html
+++ b/src/app/components/request/edit/editRequest.component.html
@@ -20,36 +20,53 @@
                                 </div>
 
                                 <br>
+                                <div class="container mb-3">
+                                        <label for="tArequest">Observaciones</label>
+                                        <textarea id="tArequest" rows="2" cols="50" name="desc" class="form-control" #desc="ngModel" [(ngModel)]="req.observations">
+                                        
+                                     </textarea>
+                                    </div>
+                                <br>
                                     
+                                        
                                         <div class="container">
                                                 <p>Productos seleccionados</p>
                                                 <table class="table user-list">
-                                                        <thead>
-                                                            <tr>
-                                                                <th><span>Producto</span></th>
-                                                                <th><span>Category</span></th>
-                                                            </tr>
-                                                        </thead>
-                                                        <tbody>
-                                                            <tr *ngFor="let sl of selected, let i = index">
-                                                                <td>
-                                                                    <a href="#" class="user-link">{{sl.name}} {{i}}</a>
-                                                                </td>
-                                                                <td>
-                                                                    <a href="#" class="user-link">{{sl.unit}}</a>
-                                                                </td>
-                                                                <td>
-                                                                    <a class="table-link danger" (click)="deleteItem(i)">
-                                                                        <span class="fa-stack">
-                                                                            <i class="fa fa-square fa-stack-2x"></i>
-                                                                            <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
-                                                                        </span>
-                                                                    </a>
-                                                                </td>
-                                                            </tr>
-                                                        </tbody>
-                                                    </table>
-                                        </div>
+                                                    <thead>
+                                                        <tr>
+                                                            <th><span>Producto</span></th>
+                                                            <th><span>Unidades</span></th>
+                                                            <th><span>Cantidad</span></th>
+                                                            <th><span>Proveedor</span></th>
+                                                            <th><span>Opciones</span></th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        <tr *ngFor="let sl of selected, let i = index">
+                                                            <td>
+                                                                <a href="#" >{{sl.name}}</a>
+                                                            </td>
+                                                            <td>
+                                                                <a href="#" >{{sl.unit}}</a>
+                                                            </td>
+                                                            <td>
+                                                                <a href="#" >{{sl.quantity}}</a>
+                                                            </td>
+                                                            <td>
+                                                                <a href="#" >{{sl.provider}}</a>
+                                                            </td>
+                                                            <td style="width: 20%;">
+                                                                <a class="table-link danger" (click)="deleteElement(i)">
+                                                                    <span class="fa-stack">
+                                                                        <i class="fa fa-square fa-stack-2x"></i>
+                                                                        <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
+                                                                    </span>
+                                                                </a>
+                                                            </td>
+                                                        </tr>
+                                                    </tbody>
+                                                </table>
+                                            </div>
                                 
 
                                 <div class="row">
@@ -69,20 +86,70 @@
 <br>
 <div class="container">
         <div class="row">
-                <div *ngFor="let p of products" class="col-sm-3">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">{{p.name}}</h5>
-                                <p class="card-text">{{p.category}}
-                                </p>
-                                <p class="card-text font-weight-bold">{{p.unit}}
-                                    </p>
-                                <a class="btn btn-primary" (click)="addProduct(p.name,p.category)">Add</a>
-                            </div>
-                        </div>
+            <div *ngFor="let p of products" class="col-sm-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">{{p.name}}</h5>
+                        <p class="card-text">{{p.category.type}}
+                        </p>
+                        <p class="card-text font-weight-bold">{{p.unit.name}}
+                        </p>
+                        <a class="btn btn-primary" data-toggle="modal" data-target="#myModal" (click)="addProduct(p)">Add</a>
                     </div>
+                </div>
+            </div>
         </div>
-</div>
-<br>
-<br>
-<br>
+    </div>
+
+
+
+    <div class="modal" id="myModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+        
+                    
+                    <div class="modal-header">
+                            <h4 class="modal-title">Producto a agregar: {{pSelected.name}}</h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+            
+                    
+                        <div class="modal-body">
+                            <div class="form-row">
+                                <div class="col-md-3 mb-3">
+                                    <label for="validationCustom05">Unidad deseada</label>
+                                    <select id="inputType" class="form-control" name="uType " #uType="ngModel" [(ngModel)]="pToAdd.unit" required>
+                                        <option selected>Elegir..</option>
+                                        <option *ngFor="let u of pSelected">{{u.name}}</option>
+                                    </select>
+                                </div>
+                                <div class="col-md-3 mb-3">
+                                    <label for="validationCustom05">Proveedor deseado</label>
+                                    <select id="inputType" class="form-control" name="pProv " #pProv="ngModel" [(ngModel)]="pToAdd.provider" required>
+                                        <option selected>Elegir..</option>
+                                        <option *ngFor="let p of pSelected2">{{p}}</option>
+                                    </select>
+                                </div>
+                                <div class="col-md-4 mb-3">
+                                    <label for="validationCustom01">Cantidad requerida</label>
+                                    <input type="text" class="form-control" name="qtty" #qtty="ngModel" [(ngModel)]="pToAdd.quantity" placeholder="2" required>
+                                </div>
+            
+                            </div>
+            
+                        </div>
+            
+                       
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-success" data-dismiss="modal" (click)="addToList()">Add</button>
+                        </div>
+            
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+
